--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,32 +1,50 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800');
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  font-family: 'Open Sans', sans-serif;
 }
 
 .container {
-  background-color: green;
+  background-image: linear-gradient(99deg, #ff70a6,#ff9770 40%, #ffd670 73%, #e9ff70);
+  position: absolute;
+  width: 100vw;
+  top: 0px;
+  bottom: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.innerContainer {
+  height: 350px;
+  width: 400px;
+  background-image: linear-gradient(97deg, #ff9770, #ffd670);
+  box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.1), 0 6px 6px 0 rgba(0, 0, 0, 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.Helo {
+  color: white;
+  display: block;
+  font-size: 32px;
+  font-weight: 600;
+  margin-top: -40px;
+  margin-bottom: -20px;
+}
+
+.authButton {
+  width: 75%;
+  margin-top: -20px;
+  font-weight: 400;
+  letter-spacing: 1.25px;
+  font-size: 16px;
+  border: none;
+  color: white;
+  border-radius: 1px;
+  background-image: radial-gradient(circle at 46%, #737373, #403d39);
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.2);
 }
