--- a/client/src/Components/Dashboard/dashboard.css
+++ b/client/src/Components/Dashboard/dashboard.css
@@ -1,21 +1,44 @@
-.dashParent {
-    height: 100vh;
-    width: 100vw;
-    background-color: yellow;
+div {
+    display: block;
+    
+}
+
+.dash_parent_container {
+    width: 100%;
+    height: 100%;
+    min-width: 1200px;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    background-color: #f2f2f2; 
+    
+}
+
+.dash_child_container {
+    width: 80%;
+    height: 150px;
+    min-width: 1000px;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    margin-top: 25px;
 }
 
 .dashTop {
     display: flex;
     justify-content: space-around;
-    align-items: center;
-    height: 400px;
-    width: 100%;
+    flex-direction: row;
 }
 
 .dashExplanation {
-    height: 300px;
+    background-color: #fff;
+    border-radius: 2px;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.2);
+    height: 150px;
     width: 500px;
     display: flex;
-    align-items: center;
-    justify-content: space-around;
+    margin-left: 20px;
+    box-sizing: border-box;
+    padding: 15px;
+    text-align:left;
 }
