--- a/client/src/Components/UserCard/userCard.css
+++ b/client/src/Components/UserCard/userCard.css
@@ -1,9 +1,33 @@
 .dash-parent {
-    height: 300px;
-    width: 300px;
-    background-color: blue;
-    color: white;
+    height: 150px;
+    width: 321px;
+    background-color: #fff;
+    color: black;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 2px;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
+    
+}
+
+img[alt^="i"] {
+    border: 3px solid #ff9770;
+    width: 123px;
+    height: 123px;
+}
+
+.dash-child-left {
+    width: 150px;
+    height: 100%;
+    box-sizing: border-box;
+    padding: 10px;
+}
+
+.dash-child-right {
+    width: calc(100% - 150px);
+    height: 100%;
+    box-sizing: border-box;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
